# prisioners_dilemma

./: .gitignore  .travis.yml  CMakeLists.txt  Doxyfile  LICENSE  README.markdown  TODO.markdown  install_catch2.sh  install_hdf5.sh  make_tags.sh
Championship/: CMakeLists.txt
Championship/source/: championship.cpp
ChampionshipApp/: CMakeLists.txt
ChampionshipLib/: CMakeLists.txt
ChampionshipLib/include/: Championship.hpp  Match.hpp  Payoff.hpp
ChampionshipLib/source/: Championship.cpp  Match.cpp  Payoff.cpp
ChampionshipLibTest/: CMakeLists.txt
ChampionshipLibTest/source/: championshipTest.cpp  matchTest.cpp  payoffTest.cpp
FactoryLib/: CMakeLists.txt
FactoryLib/include/: Match.hpp  Player.hpp  Strategies.hpp  Strategy.hpp
FactoryLib/source/: Match.cpp  Player.cpp  Strategies.cpp  Strategy.cpp
FactoryLibTest/: CMakeLists.txt
FactoryLibTest/source/: main.cpp  matchTest.cpp  playerTest.cpp  strategiesTest.cpp  strategyTest.cpp
PlayerLib/: CMakeLists.txt
PlayerLib/include/: Player.hpp
PlayerLib/source/: Player.cpp
PlayerLibTest/: CMakeLists.txt
PlayerLibTest/source/: main.cpp  playerTest.cpp
PrisonersDilemmaFileLib/: CMakeLists.txt
PrisonersDilemmaFileLib/include/: PrisonersDilemmaFile.hpp
PrisonersDilemmaFileLib/source/: PrisonersDilemmaFile.cpp
PrisonersDilemmaFileLibTest/: CMakeLists.txt
PrisonersDilemmaFileLibTest/source/: prisonersDilemmaFileTest.cpp
StrategyLib/: CMakeLists.txt
StrategyLib/include/: Decision.hpp  Strategies.hpp  Strategy.hpp  StrategyTest.hpp
StrategyLib/source/: Strategies.cpp  Strategy.cpp  StrategyTest.cpp
StrategyLibTest/: CMakeLists.txt
StrategyLibTest/source/: decisionTest.cpp  main.cpp  strategiesTest.cpp  strategyTest.cpp
UtilsLib/: CMakeLists.txt
UtilsLib/include/: Decision.hpp  Filesystem.hpp  Payoff.hpp  Test.hpp
UtilsLib/source/: Decision.cpp  Payoff.cpp
UtilsLibTest/: CMakeLists.txt
UtilsLibTest/source/: decisionTest.cpp  payoffTest.cpp  utilsLibTest.cpp
cmake/: Catch2_package.cmake  CodeCoverage.cmake  HDF5_package.cmake  apps.cmake  check_compiler.cmake  code_coverage_html_target.cmake  code_coverage_setup.cmake  developer_options.cmake  final_message.cmake  install_setup.cmake  main_project_config.cmake  sub_projects.cmake
doc/: UML_diagram.xmi
doc/file_format/: diagram_elements_template.xml  file_format.drawio
documentation/: Doxyfile  UML_diagram.xmi  mainpage.dox
documentation/file_format/: diagram_elements_template.xml
pkg/: Findprisoners_dilemma.cmake  prisoners_dilemma-simple_version.cmake.in  prisoners_dilemmaConfig.cmake.in
prisoners_dilemma_analysis/: TODO.markdown  environment.yml  plot.py  setup.py
prisoners_dilemma_analysis/prisoners_dilemma_analysis/: PrisonersDilemmaFile.py  __init__.py
prisoners_dilemma_analysis/test/: test_championship_plots.py  test_simple_test.py
prisoners_dilemma_analysis/test/data/: all_strategies.prisonersdilemma
test_install/: CMakeLists.txt  main.cpp
